@@ -48,6 +48,9 @@ class Roda
     # As shown above, you can use Roda's routing tree methods inside the
     # static_route block to have shared behavior for different request methods,
     # while still having handling the request methods differently.
+    #
+    # Note that if you want to use the static_routing plugin and the hooks
+    # plugin at the same time, you should load the hooks plugin first.
     module StaticRouting
       def self.configure(app)
         app.opts[:static_routes] = {}
@@ -104,12 +107,13 @@ class Roda
       module InstanceMethods
         # If there is a static routing method for the given path, call it
         # instead having the routing tree handle the request.
-        def call
-          r = @_request
-          if route = self.class.static_route_for(r.request_method, r.path_info)
-            catch(:halt){r.static_route(&route)}
-          else
-            super
+        def call(&block)
+          super do |r|
+            if route = self.class.static_route_for(r.request_method, r.path_info)
+              r.static_route(&route)
+            else
+              instance_exec(r, &block)
+            end
           end
         end
       end
